# table-with-million-records/src/main/resources/openapi/open-api.yaml
@@ -67,6 +67,51 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
 
   /private-app/transactions/{transaction-id}:
+    get:
+      tags:
+        - transaction
+      summary: get a transaction by ID
+      description: get a transaction detail by its ID
+      operationId: getTransaction
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: transaction-id
+          in: path
+          description: ID of the transaction to retrieve
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: transaction retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TransactionDetail"
+        "401":
+          description: Unauthorized
+        "403":
+          description: forbidden
+        "404":
+          description: transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: internal server error operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
     put:
       tags:
         - transaction
